tests/golden/type_errors/imported_file_type_error.err
Type error at /home/junhe/compiler/tests/golden/type_errors/imported_file_type_error_deps/lib.cd:1:20: undefined variable `missing`
  export let value = missing;
                     ^
